[package]
authors = [ "Francesco Dainese <franci.dainese@gmail.com>" ]
edition = "2018"
name    = "sealed_box"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2     = "0.9"
crypto_box = "0.2"
rand       = "0.7"

[dev-dependencies]
sodiumoxide = "0.2"
