[package]
name    = "sealed-box"
version = "0.2.0"
authors = ["Francesco Dainese <franci.dainese@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.4"
crypto_box = "0.7.2"
rand = "0.8.5"

[dev-dependencies]
sodiumoxide = "0.2.7"
